--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -19,3 +19,5 @@ install-path = "CARGO_HOME"
 publish-jobs = ["homebrew"]
 # Whether to install an updater program
 install-updater = true
+# don't check/regenerate ci scripts (release.yml)
+allow-dirty = ["ci"]
