--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -19,12 +19,11 @@ install-path = "CARGO_HOME"
 publish-jobs = ["homebrew"]
 # Whether to install an updater program
 install-updater = true
-# don't check/regenerate ci scripts (release.yml)
 
 [dist.github-custom-runners]
 global = "ubuntu-latest"
-x86_64-unknown-linux-gnu = "ubuntu-latest"
+x86_64-unknown-linux-gnu = "ubuntu-22.04"
 aarch64-apple-darwin = "macos-14"
 x86_64-apple-darwin = "macos-13"
 aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"
-x86_64-pc-windows-msvc = "windows-latest"
+x86_64-pc-windows-msvc = "windows-2022"
