--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -21,7 +21,7 @@ publish-jobs = ["homebrew"]
 install-updater = true
 
 [dist.github-custom-runners]
-global = "ubuntu-latest"
+global = "ubuntu-22.04"
 x86_64-unknown-linux-gnu = "ubuntu-22.04"
 aarch64-apple-darwin = "macos-14"
 x86_64-apple-darwin = "macos-13"
