--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,13 @@ tower-lsp = "0.20.0"
 tower = { version = "0.4", features = ["util"] }
 dashmap = "6.1.0"
 ropey = "1.6.1"
-tx3-lang = "0.3.0"
+tx3-lang = "0.4.1"
 pest = "2.7.15"
 miette = "7.5.0"
 serde_json = "1.0.140"
 hex = "0.4.3"
+thiserror = "2.0.12"
+url = "2.5.4"
 
 # The profile that 'dist' will build with
 [profile.dist]
