--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0.140"
 hex = "0.4.3"
 thiserror = "2.0.12"
 url = "2.5.4"
+clap = { version = "4.5", features = ["derive"] }
 
 # The profile that 'dist' will build with
 [profile.dist]
